fix: flex-start align in header

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,9 @@
 .header {
-  align-items: start;
+  align-items: flex-start;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   box-sizing: border-box;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   max-width: 880px;
   padding-top: 45px;
   width: 100%;
